Add FFM-based PDAL bindings with bundled native runtime
- pdal-ffm-core: Pdal.execute(json)/Pdal.version() API, hand-written FFM
  downcalls to a minimal C ABI shim, native loader with cacheKey-based
  extraction, runtime configuration (GDAL_DATA, PROJ_DATA, PDAL_DRIVER_PATH,
  bundled CA bundle)
- pdal-ffm-natives: per-classifier JARs for linux/osx/windows x86_64/aarch64
  with packaged manifest and cacheKey
- native/pdal-ffi: C ABI shim (pipeline create/execute/metadata/log/error/
  point count/destroy plus environment export)
- tools/natives: pinned conda lock, deterministic resolver (channel SHA-256,
  skips removed upstream artifacts), staging incl. shim build, relocation and
  dependency audit
- tools/ffi: shim build scripts for clang/g++ and MSVC (vswhere/vcvars)
- unit tests, integration tests and packaged-native smoke test
- CI workflows (build matrix, natives matrix, release)
- docs: README, docs/runtime.md, TODO, THIRD_PARTY_NOTICES

Bundled runtime: PDAL 2.10.2 (libpdalcpp.20), GDAL 3.13.3, PROJ 9.8.1.